@@ -13,8 +13,7 @@ modules_LTLIBRARIES = example_module.la     \
                       m_ltrace.la           \
                       m_ojoin.la            \
                       m_operspy.la          \
-                      m_opme.la             \
-                      m_webirc.la
+                      m_opme.la
 
 example_module_la_LDFLAGS = $(MODULE_FLAGS)
 ip_cloaking_la_LDFLAGS = $(MODULE_FLAGS)
@@ -26,7 +25,6 @@ m_ltrace_la_LDFLAGS = $(MODULE_FLAGS)
 m_ojoin_la_LDFLAGS = $(MODULE_FLAGS)
 m_operspy_la_LDFLAGS = $(MODULE_FLAGS)
 m_opme_la_LDFLAGS = $(MODULE_FLAGS)
-m_webirc_la_LDFLAGS = $(MODULE_FLAGS)
 
 
 example_module_la_SOURCES = example_module.c
@@ -39,6 +37,5 @@ m_ltrace_la_SOURCES = m_ltrace.c
 m_ojoin_la_SOURCES = m_ojoin.c
 m_operspy_la_SOURCES = m_operspy.c
 m_opme_la_SOURCES = m_opme.c
-m_webirc_la_SOURCES = m_webirc.c
 
 modules: $(modules_LTLIBRARIES)
