@@ -107,9 +107,11 @@ o) +S - Cannot join channel unless using SSL
 
 
 -- ircd-hybrid-8.0.5 Release Notes
+########################################################################
 o) IMPORTANT: nick and topic lengths are now configurable via ircd.conf.
    A max_nick_length, as well as a max_topic_length configuration option
    can now be found in the serverinfo{} block
+########################################################################
 o) Fixed build on GNU/Hurd as reported by Dominic Hargreaves
 o) Fixed log files not getting reopened after /rehash
 o) Improved logging of configuration file issues
@@ -118,6 +120,8 @@ o) Linux RT signal support for notification of socket events has been dropped
 o) Fixed "STATS Y|y" sometimes sending weird sendq/recvq values
 o) INFO now also shows configured values of 'disable_fake_channels',
    and 'stats_e_disabled'
+o) m_webirc.c is now officially supported, and has been moved from contrib/
+   to modules/
 
 
 -- ircd-hybrid-8.0.4 Release Notes
